# Bouncing_into_Chaos

./: .gitignore  .gitmodules  README.md  index.html  pyproject.toml
mars/: mars_pipeline.py  renderers.py
mars/configs/: base_config_template.py
mars/configs/components/: background_model_configs.py  data_configs.py  foreground_model_configs.py  kplanes_model_configs.py
mars/configs/storage_configs/: air.py  base_storage_config.py  didi.py
mars/data/: mars_datamanager.py  mars_dataset.py  mars_kitti_dataparser.py  mars_vkitti_dataparser.py
mars/experiment_configs/kitti/: kitti_full.py  kitti_nvs.py
mars/experiment_configs/vkitti/: vkitti_full.py  vkitti_nvs.py
mars/fields/: car_nerf_field.py  kplanes_field.py  nerfacto_field.py
mars/fields_components/: fields_head.py
mars/model_components/: losses.py
mars/models/: car_nerf.py  kplanes.py  nerfacto.py  scene_graph.py  semantic_nerfw.py
mars/utils/: neural_scene_graph_helper.py
scripts/: cicai_render.py  generate_latent_code.py  img2gif.py
static/js/: index.js
